--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 					</p>
 					<p>
 						<label for="email">Email :</label>
-						<input type="mail" id="email" placeholder="exemple@domain.ex" required>
+						<input type="email" id="email" placeholder="exemple@domain.ex" required>
 					</p>
 					<p>				
 						<input type="submit" value="Envoyer">
