--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		<div class="second-part">
 			<section class="region-main">
 				<article>
-					<img src="https://think.storage.googleapis.com/images/mm_betterstrategy_454x255.png" />
+					<img src="https://think.storage.googleapis.com/images/mm_betterstrategy_454x255.png" alt="Image illustrative article 1 : Intro better strategy"/>
 					<div>
 						<h2>Titre de l'article</h2>
 						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
@@ -58,7 +58,7 @@
 					</div>
 				</article>
 				<article>
-					<img src="https://think.storage.googleapis.com/images/micro-moments-shopper-journey-report-harvard-business-review-1-sm.jpg" />
+					<img src="https://think.storage.googleapis.com/images/micro-moments-shopper-journey-report-harvard-business-review-1-sm.jpg" alt="Image illustrative article 2 : 28% influenced by the mobile device" />
 					<div>
 						<h2>Titre de l'article</h2>
 						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
@@ -66,7 +66,7 @@
 					</div>
 				</article>
 				<article>
-					<img src="https://think.storage.googleapis.com/images/how-moms-use-youtube-videos-new-trends-and-insights-sm-1.jpg" />
+					<img src="https://think.storage.googleapis.com/images/how-moms-use-youtube-videos-new-trends-and-insights-sm-1.jpg" alt="Image illustrative article 3 : une mère et son enfant devant un écran d'ordinateur"/>
 					<div>
 						<h2>Titre de l'article</h2>
 						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
@@ -76,7 +76,7 @@
 			</section>
 			<form action="#" id="form">
 				<fieldset>
-					<legend><h2>Contactez-nous</h2></legend>
+					<h2>Contactez-nous</h2>
 					<p>
 						<label for="nom">Nom :</label>
 						<input type="text" id="nom" placeholder="Votre nom" required>
