--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@
 		<section class="first-part">
 			<h2></h2>
 			<article class="article-left">
-				<h2><a href="#">Titre de l'article 11 </a></h2>
-				<p>
-					Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-				</p>
+				<div>
+					<h2><a href="#">Titre de l'article 11 </a></h2>
+					<p>
+						Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+					</p>
+				</div>
 			</article>
 
 			<article class="article-right">
